fixes some spacing

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -22,7 +22,7 @@
   &__icons-container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     gap: 20px;
     width: 100%;
   }
